--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,10 @@
 <div id='container' ng-controller='LinkController'>
-   
+   <div class='navigation'>
+      <ul>
+         <li><a href="#/links" class="links">Links</a></li>
+         <li><a href="#/shorten" class="shorten">Shorten</a></li>
+         <!-- make signout work not just redirect to login page -->
+         <li><a href="#/signin" class="signout">Signout</a></li>
+      </ul>
+   </div>
 </div>
